fix username not showing up in comments

--- a/app/assets/stylesheets/components/comment/comments.scss
+++ b/app/assets/stylesheets/components/comment/comments.scss
@@ -18,7 +18,7 @@
 }
 .comments-dash {
     padding-left: 0.5rem; 
-    padding-right: 0rem; 
+    padding-right: 0.5rem; 
 }
 .comments-date {
     padding-left: 0.5rem; 
